// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calculator Test Calculator Component should render correctly 1`] = `
<div>
  <div
    class="overflow-y-auto relative w-screen md:w-96 h-screen md:h-[90vh] bg-[#303136] md:rounded-3xl md:shadow-2xl md:shadow-cyan-500/50"
  >
    <div
      class="absolute top-2 left-2"
    >
      <button
        class="py-2 px-4 text-sm font-medium text-white hover:text-cyan-500"
        type="button"
      >
        <svg
          fill="currentColor"
          height="30"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 20 20"
          width="30"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M11.49 3.17c-.38-1.56-2.6-1.56-2.98 0a1.532 1.532 0 01-2.286.948c-1.372-.836-2.942.734-2.106 2.106.54.886.061 2.042-.947 2.287-1.561.379-1.561 2.6 0 2.978a1.532 1.532 0 01.947 2.287c-.836 1.372.734 2.942 2.106 2.106a1.532 1.532 0 012.287.947c.379 1.561 2.6 1.561 2.978 0a1.533 1.533 0 012.287-.947c1.372.836 2.942-.734 2.106-2.106a1.533 1.533 0 01.947-2.287c1.561-.379 1.561-2.6 0-2.978a1.532 1.532 0 01-.947-2.287c.836-1.372-.734-2.942-2.106-2.106a1.532 1.532 0 01-2.287-.947zM10 13a3 3 0 100-6 3 3 0 000 6z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex flex-col justify-between p-8 w-full h-auto"
    >
      <div
        class="flex flex-col justify-center items-end w-full h-[40vh]"
      >
        <div
          class="text-5xl font-bold text-right text-white"
        >
          0,00
          🇺🇸
        </div>
        <div
          class="flex flex-col my-2 text-3xl font-light text-right text-gray-300"
        >
          <span>
            0,00 🇨🇴
          </span>
          <span>
            0,00 🇻🇪
          </span>
        </div>
      </div>
      <div
        class="grid grid-cols-4 gap-3 pb-12 w-full h-[50vh]"
      >
        <div
          class="col-span-2"
        >
          <button
            class="rounded-2xl  text-4xl bg-gray-900 text-cyan-500 w-full h-full grid place-items-center "
            color="cyan-200"
            data-testid="🇨🇴"
          >
            🇨🇴
          </button>
        </div>
        <div
          class="col-span-2"
        >
          <button
            class="rounded-2xl  text-4xl bg-gray-900 text-cyan-500 w-full h-full grid place-items-center shadow-2xl shadow-cyan-500/50"
            color="gray-100"
            data-testid="🇺🇸"
          >
            🇺🇸
          </button>
        </div>
        <div
          class=""
        >
          <button
            class="rounded-2xl  text-4xl bg-gray-900 text-cyan-500 w-full h-full grid place-items-center "
            data-testid="7"
          >
            7
          </button>
        </div>
        <div
          class=""
        >
          <button
            class="rounded-2xl  text-4xl bg-gray-900 text-cyan-500 w-full h-full grid place-items-center "
            data-testid="8"
          >
            8
          </button>
        </div>
        <div
          class=""
        >
          <button
            class="rounded-2xl  text-4xl bg-gray-900 text-cyan-500 w-full h-full grid place-items-center "
            data-testid="9"
          >
            9
          </button>
        </div>
        <div
          class="row-span-2"
        >
          <button
            class="rounded-2xl  text-4xl bg-gray-900 text-cyan-500 w-full h-full grid place-items-center "
            data-testid="🇻🇪"
          >
            🇻🇪
          </button>
        </div>
        <div
          class=""
        >
          <button
            class="rounded-2xl  text-4xl bg-gray-900 text-cyan-500 w-full h-full grid place-items-center "
            data-testid="4"
          >
            4
          </button>
        </div>
        <div
          class=""
        >
          <button
            class="rounded-2xl  text-4xl bg-gray-900 text-cyan-500 w-full h-full grid place-items-center "
            data-testid="5"
          >
            5
          </button>
        </div>
        <div
          class=""
        >
          <button
            class="rounded-2xl  text-4xl bg-gray-900 text-cyan-500 w-full h-full grid place-items-center "
            data-testid="6"
          >
            6
          </button>
        </div>
        <div
          class=""
        >
          <button
            class="rounded-2xl  text-4xl bg-gray-900 text-cyan-500 w-full h-full grid place-items-center "
            data-testid="1"
          >
            1
          </button>
        </div>
        <div
          class=""
        >
          <button
            class="rounded-2xl  text-4xl bg-gray-900 text-cyan-500 w-full h-full grid place-items-center "
            data-testid="2"
          >
            2
          </button>
        </div>
        <div
          class=""
        >
          <button
            class="rounded-2xl  text-4xl bg-gray-900 text-cyan-500 w-full h-full grid place-items-center "
            data-testid="3"
          >
            3
          </button>
        </div>
        <div
          class=""
        >
          <button
            class="rounded-2xl  text-4xl bg-gray-900 text-cyan-500 w-full h-full grid place-items-center "
            data-testid="C"
          >
            C
          </button>
        </div>
        <div
          class="col-span-2"
        >
          <button
            class="rounded-2xl  text-4xl bg-gray-900 text-cyan-500 w-full h-full grid place-items-center "
            data-testid="0"
          >
            0
          </button>
        </div>
        <div
          class=""
        >
          <button
            class="rounded-2xl  text-4xl bg-gray-900 text-cyan-500 w-full h-full grid place-items-center "
            data-testid="."
          >
            .
          </button>
        </div>
        <div
          class=""
        >
          <button
            class="rounded-2xl  text-4xl bg-gray-900 text-cyan-500 w-full h-full grid place-items-center "
            data-testid="AC"
          >
            AC
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Calculator Test Press Pad 1`] = `
<div>
  <div
    class="overflow-y-auto relative w-screen md:w-96 h-screen md:h-[90vh] bg-[#303136] md:rounded-3xl md:shadow-2xl md:shadow-cyan-500/50"
  >
    <div
      class="absolute top-2 left-2"
    >
      <button
        class="py-2 px-4 text-sm font-medium text-white hover:text-cyan-500"
        type="button"
      >
        <svg
          fill="currentColor"
          height="30"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 20 20"
          width="30"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M11.49 3.17c-.38-1.56-2.6-1.56-2.98 0a1.532 1.532 0 01-2.286.948c-1.372-.836-2.942.734-2.106 2.106.54.886.061 2.042-.947 2.287-1.561.379-1.561 2.6 0 2.978a1.532 1.532 0 01.947 2.287c-.836 1.372.734 2.942 2.106 2.106a1.532 1.532 0 012.287.947c.379 1.561 2.6 1.561 2.978 0a1.533 1.533 0 012.287-.947c1.372.836 2.942-.734 2.106-2.106a1.533 1.533 0 01.947-2.287c1.561-.379 1.561-2.6 0-2.978a1.532 1.532 0 01-.947-2.287c.836-1.372-.734-2.942-2.106-2.106a1.532 1.532 0 01-2.287-.947zM10 13a3 3 0 100-6 3 3 0 000 6z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex flex-col justify-between p-8 w-full h-auto"
    >
      <div
        class="flex flex-col justify-center items-end w-full h-[40vh]"
      >
        <div
          class="text-5xl font-bold text-right text-white"
        >
          1,00
          🇺🇸
        </div>
        <div
          class="flex flex-col my-2 text-3xl font-light text-right text-gray-300"
        >
          <span>
            3.800,00 🇨🇴
          </span>
          <span>
            4,50 🇻🇪
          </span>
        </div>
      </div>
      <div
        class="grid grid-cols-4 gap-3 pb-12 w-full h-[50vh]"
      >
        <div
          class="col-span-2"
        >
          <button
            class="rounded-2xl  text-4xl bg-gray-900 text-cyan-500 w-full h-full grid place-items-center "
            color="cyan-200"
            data-testid="🇨🇴"
          >
            🇨🇴
          </button>
        </div>
        <div
          class="col-span-2"
        >
          <button
            class="rounded-2xl  text-4xl bg-gray-900 text-cyan-500 w-full h-full grid place-items-center shadow-2xl shadow-cyan-500/50"
            color="gray-100"
            data-testid="🇺🇸"
          >
            🇺🇸
          </button>
        </div>
        <div
          class=""
        >
          <button
            class="rounded-2xl  text-4xl bg-gray-900 text-cyan-500 w-full h-full grid place-items-center "
            data-testid="7"
          >
            7
          </button>
        </div>
        <div
          class=""
        >
          <button
            class="rounded-2xl  text-4xl bg-gray-900 text-cyan-500 w-full h-full grid place-items-center "
            data-testid="8"
          >
            8
          </button>
        </div>
        <div
          class=""
        >
          <button
            class="rounded-2xl  text-4xl bg-gray-900 text-cyan-500 w-full h-full grid place-items-center "
            data-testid="9"
          >
            9
          </button>
        </div>
        <div
          class="row-span-2"
        >
          <button
            class="rounded-2xl  text-4xl bg-gray-900 text-cyan-500 w-full h-full grid place-items-center "
            data-testid="🇻🇪"
          >
            🇻🇪
          </button>
        </div>
        <div
          class=""
        >
          <button
            class="rounded-2xl  text-4xl bg-gray-900 text-cyan-500 w-full h-full grid place-items-center "
            data-testid="4"
          >
            4
          </button>
        </div>
        <div
          class=""
        >
          <button
            class="rounded-2xl  text-4xl bg-gray-900 text-cyan-500 w-full h-full grid place-items-center "
            data-testid="5"
          >
            5
          </button>
        </div>
        <div
          class=""
        >
          <button
            class="rounded-2xl  text-4xl bg-gray-900 text-cyan-500 w-full h-full grid place-items-center "
            data-testid="6"
          >
            6
          </button>
        </div>
        <div
          class=""
        >
          <button
            class="rounded-2xl  text-4xl bg-gray-900 text-cyan-500 w-full h-full grid place-items-center "
            data-testid="1"
          >
            1
          </button>
        </div>
        <div
          class=""
        >
          <button
            class="rounded-2xl  text-4xl bg-gray-900 text-cyan-500 w-full h-full grid place-items-center "
            data-testid="2"
          >
            2
          </button>
        </div>
        <div
          class=""
        >
          <button
            class="rounded-2xl  text-4xl bg-gray-900 text-cyan-500 w-full h-full grid place-items-center "
            data-testid="3"
          >
            3
          </button>
        </div>
        <div
          class=""
        >
          <button
            class="rounded-2xl  text-4xl bg-gray-900 text-cyan-500 w-full h-full grid place-items-center "
            data-testid="C"
          >
            C
          </button>
        </div>
        <div
          class="col-span-2"
        >
          <button
            class="rounded-2xl  text-4xl bg-gray-900 text-cyan-500 w-full h-full grid place-items-center "
            data-testid="0"
          >
            0
          </button>
        </div>
        <div
          class=""
        >
          <button
            class="rounded-2xl  text-4xl bg-gray-900 text-cyan-500 w-full h-full grid place-items-center "
            data-testid="."
          >
            .
          </button>
        </div>
        <div
          class=""
        >
          <button
            class="rounded-2xl  text-4xl bg-gray-900 text-cyan-500 w-full h-full grid place-items-center "
            data-testid="AC"
          >
            AC
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
